--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "marked": "^2.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.8.0",
+    "recoil": "^0.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
